--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ nav.show ul.grid {
   cursor: pointer;
 }
 
-nav .icon-close {
+nav .icon-x {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -212,7 +212,7 @@ nav .icon-close {
   transition: 0.2s;
 }
 
-nav.show div.icon-close {
+nav.show div.icon-x {
   visibility: visible;
   opacity: 1;
   top: 1.5rem;
@@ -355,6 +355,8 @@ nav.show div.icon-close {
 #about .image img {
   position: relative;
   border-radius: 0.25rem;
+  left: 2.93rem;
+  
 }
 
 #about .text {
@@ -658,6 +660,9 @@ footer .social a:hover {
     --title-font-size: 2.25rem;
     --subtitle-font-size: 1.125rem;
   }
-}
 
+  #about .image::before {
+    height: 50%;
+}
+}
 /*  medium devices (tablets): 767+ */
